initial project version

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" href="translate.min.css" />
+	<link rel="stylesheet" href="translate.css" />
 	<script src="jquery.min.js"></script>
-	<script src="translate.min.js"></script>
+	<script src="translate.js"></script>
 	<script>
 	$(function() {
 		Translate.start('ru');
